--- a/assignments.html
+++ b/assignments.html
@@ -8,7 +8,7 @@
     <meta name="author" content="">
     <link rel="icon" href="web-src/favicon.png">
 
-    <title>Social Computing 2019 | Assignments</title>
+    <title>HCI Theory & Practice 2019 | Assignments</title>
 
     <!-- Bootstrap core CSS -->
     <link href="web-src/css/bootstrap.min.css" rel="stylesheet">
@@ -20,7 +20,7 @@
   <body>
 
     <nav class="navbar navbar-expand-md navbar-dark bg-secondary fixed-top">
-      <a class="navbar-brand" href="index.html">Social Computing 2019</a>
+      <a class="navbar-brand" href="index.html">HCI 이론 및 실습 2019</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -45,106 +45,32 @@
       <div class="my-template">
 
         <h6>2019 봄학기</h6>
-        <h1>소셜네트워크 데이터마이닝과 분석</h1>
+        <h1>HCI 이론 및 실습</h1>
         <br />
 
-        <h4>Assignments</h4>
-        <a href="./how_to_submit.html">과제 제출 방법 안내 (github 사용법)</a>
-        <br />
-        <br />
-
-        <h5>Assignment 1: 2 CodeCademy course complete</h5>
+        <h5>Assignment 1: Good or Poor Interaction </h5>
         <div id="panelSteps" class="panel panel-default">
           <p>
-             (마감 3/31)
+             개인과제 | (Due: 3/18, 9PM)
           </p>
-          <p>
-            파이썬 문법에 친숙해지기 위한 self-learning 과제입니다. 수업시간에 파이썬 문법의 기초를
-            다루겠지만, 2주간 모든 문법을 다루기는 어렵습니다. 따라서, 수업시간에는 아주 중요한 개념 위주로만 살펴볼 예정입니다. 각자 별도 학습을 통해 파이썬 문법을 익혀두길 바랍니다.
-          </p>
-          <p>
-            이 수업의 중반 이후에는 웹페이지의 크롤링을 하게됩니다. 그러기 위해서는 HTML과 CSS, 그리고 웹페이지의 구조에 대한 이해가 필요합니다. 웹페이지 구조에 익숙하지 않은 학생들은 역시 CodeCademy를 통해 학습하기 바랍니다.
-          </p>
-          <p>
-            과제 제출은 CodeCademy 학습결과 페이지를 스크린캡춰해서 제출하면 됩니다.
-          </p>
-          <p>
-            이미 파이썬 문법에 익숙한 학생은 다음의 form을 이용하여 면제 요청을 하기 바랍니다. 성적은 완료한 것과 동일하게 부여됩니다.<br />
-            <a href="https://goo.gl/forms/YWexcFxkUTlqLh692">면제요청 링크</a>
-          </p>
+
           <ul>
-            <li><a href="https://www.codecademy.com/learn/learn-python">CodeCademy: Learn Python</a> (5 points)</li>
-            <li><a href="https://www.codecademy.com/learn/learn-html">CodeCademy: Learn HTML & CSS</a> (5 points)</li>
+            <li>주위에서 찾아볼 수 있는 모바일 앱의 좋은 디자인 사례와 나쁜 디자인 사례 조사 (각 3개)</li>
+            <li>수업시간에 다룬 기준에 따라 조사</li>
+            <li>나쁜 사례의 경우 대안을 제시 (가능하면)</li>
+            <li>워드, 혹은 슬라이드 (PDF) 로 ETL 과제함에 제출</li>
           </ul>
         </div>
         <br />
 
         <p>To be announced later...</p>
 
-        <!-- <h5>Assignment #2-1: Python Crash Course 1</h5>
-        <div id="panelSteps" class="panel panel-default">
-          <p>
-            <a href="lab-codes/Week2/Week2-Exercise.zip">template code</a> (마감 9/23 자정)
-          </p>
-          <p>
-            과제 템플릿을 다운로드하여 주어진 문제에 답을 하시오. (5 points)<br />
-            * 이번 과제는 처음 GitHub를 사용해보는 것이니만큼 과제 마감시간을 꼭 지키지 않아도 괜찮습니다.
-          </p>
-        </div>
-        <br />
-
-        <h5>Assignment #2-2: Python Crash Course 2</h5>
-        <div id="panelSteps" class="panel panel-default">
-          <p>
-            <a href="lab-codes/Week3/Week3-Exercise.zip">template code</a> (마감 9/30 자정)
-          </p>
-          <p>
-            과제 템플릿을 다운로드하여 주어진 문제에 답을 하시오. (5 points)<br />
-          </p>
-        </div>
-        <br />
-
-        <h5>Assignment #3: Data Cleaning and Analysis using Pandas and NumPy</h5>
-        <div id="panelSteps" class="panel panel-default">
-          <p>
-            <a href="lab-codes/Week8/Assignment%203.ipynb.zip">template code</a> (마감 10/28 자정)
-          </p>
-          <p>
-            본 과제에서는 타이타닉호의 모든 승객, 승무원의 정보와 생존자, 사망자 데이터를 분석하고자 한다.<br />
-            과제 템플릿을 다운로드하여 주어진 문제에 답을 하시오. (10 points)<br />
-          </p>
-        </div>
-        <br />
-
-        <h5>Assignment #4: Text Analysis Using NLTK & KoNLPy</h5>
-        <div id="panelSteps" class="panel panel-default">
-          <p>
-            <a href="lab-codes/Week10/Assignment4.zip">template code</a> (마감 11/11 자정)
-          </p>
-          <p>
-            본 과제에서는 주어진 텍스트를 분석하여 워드클라우드 그래프를 그린다. (15 points)<br />
-          </p>
-        </div>
-        <br />
-
-        <h5>Assignment #5: Data Crawling from Website</h5>
-        <div id="panelSteps" class="panel panel-default">
-          <p>
-            <a href="lab-codes/Week13/Assignment5.zip">template code</a> (마감 11/25 자정)
-          </p>
-          <p>
-            본 과제에서는 웹사이트와 트위터에서 자료를 수집하여 분석한다. (15 points)<br />
-          </p>
-        </div>
-        <br />
-
-      </div> -->
 
     </main><!-- /.container -->
 
     <footer class="footer">
       <div class="container">
-        <span class="text-muted">&copy;2018, Human-Computer Interaction + Design Lab. </span>
+        <span class="text-muted">&copy;2019, Human-Computer Interaction + Design Lab. </span>
       </div>
     </footer>
 
