--- a/assignments.html
+++ b/assignments.html
@@ -63,6 +63,28 @@
         </div>
         <br />
 
+        <h5>Assignment 2: Data Gathering and Analysis</h5>
+        <div id="panelSteps" class="panel panel-default">
+          <p>
+            팀 과제 | (Due: 4/15, 9PM)
+          </p>
+        
+          <ul>
+            <li>주제: 자유선택<br>e.g., smart shopping, future news, smart traveling, AI Speakers..</li>
+            <li>인터뷰, 관찰 방법 등을 통해 서비스 사용 행태/사용자 니즈 분석</li>
+            <li>데이터 분석<br>
+            - Ground Theory 에 기반하여 데이터 코딩<br>
+            - 패턴 등 분석하고 범주화<br>
+            - 발견된 insight 정리</li>
+            <li>제출: 슬라이드 형태로 보고서 제출<br>
+            - Field note<br>
+            - Affinity Diagram<br>
+            - Ground Theory 분석 결과
+            </li>
+          </ul>
+        </div>
+        <br />
+
         <p>To be announced later...</p>
 
 
