Week6 files added

--- a/assignments.html
+++ b/assignments.html
@@ -85,6 +85,26 @@
         </div>
         <br />
 
+        <h5>Assignment 3: Persona & Scenario</h5>
+        <div id="panelSteps" class="panel panel-default">
+          <p>
+            팀 과제 | (Due: 4/22, 9PM)
+          </p>
+        
+          <ul>
+            <li>팀별로 persona 를 2~3개 정도 만들기</li>
+            <li>만든 persona의 task를 고려하여 scenario 개발</li>
+            <li>다음 시간 수업 중 발표:<br>
+              - persona 한개와 해당되는 시나리오를 발표 (팀별로 5분)</li>
+            <li>제출: 보고서 제출<br>
+              - persona & 시나리오 2~3개</li>
+            <li>Sample<br>
+              - <a href="https://www.usability.gov/how-to-and-tools/methods/personas.html">https://www.usability.gov/how-to-and-tools/methods/personas.html</a><br>
+              - <a href="http://hcid.snu.ac.kr/~joonhwan/courses/hciu2018/persona_example.pdf">http://hcid.snu.ac.kr/~joonhwan/courses/hciu2018/persona_example.pdf</a></li>
+          </ul>
+        </div>
+        <br />
+
         <p>To be announced later...</p>
 
 
