--- a/schedule.html
+++ b/schedule.html
@@ -131,13 +131,16 @@
           Chapter 9, 10 | <a href="slides/Week6.pdf">lecture slide</a>
           <ul></ul>
           <p>
+            <a href="slides/BuildingChatbot-02.pdf">_카카오 오픈빌더로 챗봇 만들기 #02</a>
+          </p>
+          <p>
             >> Reading Assignment:
             <ul>
               <li>Chapter 10: Establishing User Requirements</li>
               <li>Chapter 11: Design, Prototyping and Construction</li>
             </ul>
           </p>
-          <p>Assignment 3: Persona & Scenario (Due: 4/29, 9PM)</p>
+          <p>Assignment 3: Persona & Scenario (Due: 4/22, 9PM)</p>
         </div>
         <br />
 
