Week7 files added

--- a/schedule.html
+++ b/schedule.html
@@ -144,11 +144,14 @@
         </div>
         <br />
 
-        <h5>7주 (4/16): Process of Interaction Design 2</h5>
+        <h5>7주 (4/16): Conversational UIs</h5>
         <div id="panelSteps" class="panel panel-default">
-          Chapter 10, 11 | <a href="slides/Week7.pdf">lecture slide</a>
-          <ul></ul>
-          <p><strike>Assignment 4: Contextual Inquiry & Contextual Design (Due: 4/29, 9PM)</strike><br>This assignment will be changed.</p>
+          <a href="slides/Week7-1.pdf">lecture slide 1</a> | <a href="slides/Week7-2.pdf">lecture slide 2</a>
+          <ul>
+            <li>Underlying Theories</li>
+            <li>Strategies</li>
+          </ul>
+          <p>Assignment 4: Dialog Design & Scenario Develop (Due: 4/29, 9PM)</p>
         </div>
         <br />
 
