--- a/assignments.html
+++ b/assignments.html
@@ -105,6 +105,23 @@
         </div>
         <br />
 
+        <h5>Assignment 4: Conversational UIs</h5>
+        <div id="panelSteps" class="panel panel-default">
+          <p>
+            팀 과제 | (Due: 4/29, 9PM)
+          </p>
+        
+          <ul>
+            <li>수업시간에 다룬 이론과 전략에 맞추어 대화 시나로오 설계</li>
+            <li>
+              만든 persona의 task를 고려하여 scenario 개발<br>
+              4/30 수업에서 팀별 발표
+            </li>
+
+          </ul>
+        </div>
+        <br />
+
         <p>To be announced later...</p>
 
 
