Week8 files added

--- a/assignments.html
+++ b/assignments.html
@@ -122,6 +122,24 @@
         </div>
         <br />
 
+        <h5>Assignment 5: Prototyping</h5>
+        <div id="panelSteps" class="panel panel-default">
+          <p>
+            팀 과제 | (Due: 5/12, 9PM)
+          </p>
+        
+          <ul>
+            <li>주제를 잡아 스크린을 3개 이상 디자인하고 다음의 방법으로 프로토타이핑</li>
+            <li>Paper Prototyping (Sketch)</li>
+            <li>Wireframing with Axure Pro (다른 툴 사용 가능)</li>
+            <li>Video Prototyping<br>
+                - Task 하나만 골라서 flow 를 비디오로 프로토타이핑
+            </li>
+        
+          </ul>
+        </div>
+        <br />
+
         <p>To be announced later...</p>
 
 
