Week9 files added

--- a/assignments.html
+++ b/assignments.html
@@ -140,6 +140,21 @@
         </div>
         <br />
 
+        <h5>Assignment 6: Think Aloud</h5>
+        <div id="panelSteps" class="panel panel-default">
+          <p>
+            팀 과제 | (Due: 5/27, 9PM)
+          </p>
+        
+          <ul>
+            <li>사이트, 혹은 인터페이스에서의 사용자 행동을 Think Aloud로 평가<br>
+              (강의 슬라이드 참고)
+            </li>
+        
+          </ul>
+        </div>
+        <br />
+
         <p>To be announced later...</p>
 
 
