--- a/schedule.html
+++ b/schedule.html
@@ -166,13 +166,13 @@
               <li>Chapter 13: Introducing Evaluation</li>
             </ul>
           </p>
-          <p>Assignment 5: Prototyping (Due: 5/6, 9PM)</p>
+          <p>Assignment 5: Prototyping (Due: 5/13, 9PM)</p>
         </div>
         <br />
 
         <h5>9주 (4/30): Evaluation Methods 1: Think Aloud, Interview & Survey</h5>
         <div id="panelSteps" class="panel panel-default">
-          Chapter 12, 13 | <a href="slides/Week9.pdf">lecture slide</a>
+          Chapter 12, 13 | <a href="slides/Week9.pdf">lecture slide</a> | <a href="slides/Week9_think_aloud_practice.pdf">Think Aloud Practice</a>
           <ul></ul>
           <p>
             >> Reading Assignment:
@@ -181,7 +181,7 @@
               <li>Chapter 15: Evaluation: Inspections, Analytics, and Models</li>
             </ul>
           </p>
-          <p>Assignment 6: Think Aloud (Due: 5/20, 9PM)</p>
+          <p>Assignment 6: Think Aloud (Due: 5/27, 9PM)</p>
         </div>
         <br />
 
